# advent-of-code-2025

./: Cargo.toml
src/: input.rs
