[package]
name = "aoc-2025"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
itertools = "0.14.0"

[profile.release]
debug = true # Adds symbols without slowing down execution

[[bin]]
name = "day01"

[[bin]]
name = "day02"

[[bin]]
name = "day03"

[[bin]]
name = "day04"

[[bin]]
name = "day05"

[[bin]]
name = "day06"

[[bin]]
name = "day07"

[[bin]]
name = "day08"

[[bin]]
name = "day09"

[[bin]]
name = "day10"